<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:orientation="vertical"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:weightSum="7">

        <TextView
            android:id="@+id/txtCoinRank"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/item_rank_placeholder"
            android:textAlignment="center"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCoinName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/coin_name_placeholder"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtCoinSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/roboto"
                android:gravity="start"
                android:text="@string/item_name_placeholder"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtCoinPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:fontFamily="@font/roboto"
            android:gravity="end"
            android:text="@string/item_price_placeholder"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtChangePercent24Hr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:fontFamily="@font/open_sans"
            android:gravity="end"
            android:text="@string/not_available_string"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="14sp" />


    </LinearLayout>


    <View
        android:id="@+id/coinlistItemDivider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />
</LinearLayout>